# add-doubao-watermark

./: .gitignore  LICENSE  README.md  doubao-watermark-gui.spec  doubao-watermark.spec  pyinstaller_entry.py  pyinstaller_gui_entry.py  pyproject.toml
.github/workflows/: release-macos-x64.yml  release-macos-x86.yml  release-macos.yml  release-windows.yml
scripts/: build_macos.sh  build_windows.ps1
src/add_doubao_watermark/: __init__.py  cli.py  fonts.py  gui.py  requirements.py  watermark.py  win_dpi.py
src/add_doubao_watermark/assets/: README.md
