[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "add-doubao-watermark"
version = "0.1.0"
description = "Add '豆包AI生成' watermark to images."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Toby_top"}]
dependencies = ["Pillow>=10.0.0"]

[project.optional-dependencies]
build = ["pyinstaller>=6.3.0"]

[project.scripts]
doubao-watermark = "add_doubao_watermark.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

